# cview

./: .gitignore  CMakeLists.txt  README.md  compile_flags.txt  makefile
src/: config.c  config.h  main.c
src/config/: config.h
